--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "styled": "^1.0.0",
     "styled-components": "^5.3.8",
     "web-vitals": "^2.1.4"
